<uit de kluiten gewassen#59447422>

--- a/en/u/uit de kluiten gewassen.4472.wikitext
+++ b/en/u/uit de kluiten gewassen.4472.wikitext
@@ -1,7 +1,7 @@
 ==Dutch==
 
 ===Etymology===
-Earliest known Dutch usage in the beginning of the 18th century in ''Derde Meydag of Verhuystijd'' (1708) by S.v. Rijndorp (''En 't is een keerel uyt den kluyten, Die als een kaatsbal op kan stuyten''). The phrase was originallly used to describe a tree or plant that had grown exceptionally big, and was later used for people as well.<ref>[http://www.dbnl.org/tekst/stoe002nede01_01/stoe002nede01_01_1211.php]</ref>
+Earliest known Dutch usage in the beginning of the 18th century in ''Derde Meydag of Verhuystijd'' (1708) by S.v. Rijndorp (''En 't is een keerel uyt den kluyten, Die als een kaatsbal op kan stuyten''). The phrase was originally used to describe a tree or plant that had grown exceptionally big, and was later used for people as well.<ref>[http://www.dbnl.org/tekst/stoe002nede01_01/stoe002nede01_01_1211.php]</ref>
 
 ===Phrase===
 {{head|nl|phrase}}
