--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -450,15 +450,25 @@ From {{inh|az|trk-pro|*ăt|t=horse}}.<ref>{{R:trk-pro:SDM|*ăt|855}}</ref>
 
 ==Danish==
 
-===Pronunciation===
-* {{IPA|da|/at/|[æd̥]|/a/|[æ]}}
+===Etymology 1===
+From {{inh|da|non|at}}, cf. {{cog|sv|att}}, {{cog|nb|at}}. Probably from {{inh|da|gem-pro|*þat}}, a pronoun used as a conjunction, cf. {{cog|en|that}} and {{cog|de|dass}}.
 
-===Conjunction===
+====Pronunciation====
+* {{IPA|da|[æd̥]|[æ]}}
+
+====Conjunction====
 {{head|da|conjunction}}
 
 # [[that]]
 
-===Particle===
+===Etymology 2===
+From {{inh|da|non|at}}, cf. {{cog|sv|att}}, {{cog|nb|å}}. Originally the samme word as the preposition {{inh|da|non|at||at, to}}, {{inh|non|gem-pro|*at}} (= {{cog|da|ad}}). In the West Germanic languages, a different preposition, {{inherited|en|gem-pro|*tō||to}}, serves as the infinitive marker: {{cog|en|to}} and {{cog|de|zu}}.
+
+====Pronunciation====
+* {{IPA|da|/at/|[æd̥]|[æ]|[ʌ]}}
+{{homophones|da|og}}
+
+====Particle====
 {{head|da|particle}}
 
 # [[to]] {{gloss|infinitive-marker}}
