--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -454,7 +454,7 @@ From {{inh|az|trk-pro|*ăt|t=horse}}.<ref>{{R:trk-pro:SDM|*ăt|855}}</ref>
 From {{inh|da|non|at}}, cf. {{cog|sv|att}}, {{cog|nb|at}}. Probably from {{inh|da|gem-pro|*þat}}, a pronoun used as a conjunction, cf. {{cog|en|that}} and {{cog|de|dass}}.
 
 ====Pronunciation====
-* {{IPA|da|[æd̥]|[æ]}}
+* {{IPA|da|[ad̥]|[a]}}
 
 ====Conjunction====
 {{head|da|conjunction}}
@@ -465,7 +465,7 @@ From {{inh|da|non|at}}, cf. {{cog|sv|att}}, {{cog|nb|at}}. Probably from {{inh|d
 From {{inh|da|non|at}}, cf. {{cog|sv|att}}, {{cog|nb|å}}. Originally the samme word as the preposition {{inh|da|non|at||at, to}}, {{inh|non|gem-pro|*at}} (= {{cog|da|ad}}). In the West Germanic languages, a different preposition, {{inherited|en|gem-pro|*tō||to}}, serves as the infinitive marker: {{cog|en|to}} and {{cog|de|zu}}.
 
 ====Pronunciation====
-* {{IPA|da|/at/|[æd̥]|[æ]|[ʌ]}}
+* {{IPA|da|[ad̥]|[a]|[ʌ]}}
 {{homophones|da|og}}
 
 ====Particle====
