/* Etymology */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <limu#59450910>

--- a/en/l/limu.801596.wikitext
+++ b/en/l/limu.801596.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia|Limu (algae)}}
 
 ===Etymology===
-Borrowed from {{bor|en|haw|limu||mos}}.
+Borrowed from {{bor|en|haw|limu||moss}}.
 
 ===Noun===
 {{en-noun|~}}
