/* Translations */ Added Sanskrit translation of this word. <consume#59452170>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -103,6 +103,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmere}}.
 * Portuguese: {{t+|pt|consumir}}
 * Romanian: {{t+|ro|consuma}}
 * Russian: {{t+|ru|потреблять}}, {{t+|ru|поедать}}
+* Sanskrit: {{t+|sa|अत्ति}}, {{t+|sa|खादति}}
 * Slovene: {{t|sl|uživati|impf}}, {{t|sl|užiti|pf}}
 * Spanish: {{t+|es|consumir}}
 * Thai: {{t+|th|บริโภค}}, {{t+|th|กิน}}
