WPCHECK, HTML text style element <i> (italics) <began#59458615>

--- a/en/b/began.6789.wikitext
+++ b/en/b/began.6789.wikitext
@@ -53,7 +53,7 @@ From {{prefix|ang|be|gān}}. Cognate with {{cog|goh|bigān}}.
 #: {{quotei|ang|'''Begá''' ðé sylfne to árfæstnysse|Train thyself to godliness.|source=1 Tim. 4, 7}}
 
 ====Conjugation====
-{{ang-conj|begān<i>}}
+{{ang-conj|begān''}}
 
 ====Derived terms====
 * {{l|ang|forebegān}}
