--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -72,8 +72,16 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 * See also [[Thesaurus:police officer]]
 
 =====Derived terms=====
-* {{l|en|cophouse}}
-* {{l|en|cop shop}}
+{{col4|en
+|cophouse
+|cop shop
+|death by cop
+|kotong cop
+|ninja cop
+|robocop
+|telecop
+|suicide by cop
+}}
 
 =====Translations=====
 {{trans-top|police officer}}
