t+nl:[[overbelasten]] ([[WT:EDIT|Assisted]]) <overstrain#59462144>

--- a/en/o/overstrain.856243.wikitext
+++ b/en/o/overstrain.856243.wikitext
@@ -12,6 +12,7 @@ From {{prefix|en|over|strain}}.
 
 ====Translations====
 {{trans-top|subject to an excessive demand}}
+* Dutch: {{t+|nl|overbelasten}}
 * Hungarian: {{t+|hu|túlfeszít}}
 {{trans-mid}}
 * Swedish: {{t+|sv|överanstränga}}
