t+de:[[Skrupellosigkeit]] t-balance ([[WT:EDIT|Assisted]]) <unscrupulousness#59465073>

--- a/en/u/unscrupulousness.742250.wikitext
+++ b/en/u/unscrupulousness.742250.wikitext
@@ -11,8 +11,9 @@
 ====Translations====
 {{trans-top|the state of being unscrupulous}}
 * Finnish: {{t+|fi|raadollisuus}}
+* German: {{t+|de|Skrupellosigkeit|f}}
+{{trans-mid}}
 * Irish:
 *: Old Irish: {{t|sga|écubus|m}}
-{{trans-mid}}
 * Italian: {{t+|it|spregiudicatezza|f}}
 {{trans-bottom}}
