t+ga:[[neamhscrupall]] ([[WT:EDIT|Assisted]]) <unscrupulousness#59465081>

--- a/en/u/unscrupulousness.742250.wikitext
+++ b/en/u/unscrupulousness.742250.wikitext
@@ -13,7 +13,7 @@
 * Finnish: {{t+|fi|raadollisuus}}
 * German: {{t+|de|Skrupellosigkeit|f}}
 {{trans-mid}}
-* Irish:
+* Irish: {{t|ga|neamhscrupall|m}}
 *: Old Irish: {{t|sga|écubus|m}}
 * Italian: {{t+|it|spregiudicatezza|f}}
 {{trans-bottom}}
