--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -21,8 +21,9 @@ From {{af|en|she-|goat}}.
 * Gothic: {{t|got|𐌲𐌰𐌹𐍄𐍃|f}}
 * Greek: {{t+|el|αίγα|f}}
 *: Ancient: {{t|grc|αἴξ|f}}
-{{trans-mid}}
 * Hebrew: {{t+|he|עז|tr=éz|f}}
+* Japanese: {{t+|ja|山羊|tr=yagi}}
+{{trans-mid}}
 * Latin: {{t|la|capella|f}}, {{t|la|capella|f}}
 * Low German: {{t|nds|Zeeg|f}}, {{t|nds|Zääg|f}}, {{t|nds|Seeg|f}}, {{t|nds|Sääg|f}}
 * Macedonian: {{t|mk|коза|f}}
