--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -97,6 +97,7 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 * Polish: {{t+|pl|chwycić|pf}}, {{t+|pl|złapać}}, {{t+|pl|chwytać|impf}}, {{t+|pl|łapać|impf}}
 * Portuguese: {{t+|pt|agarrar}}, {{t+|pt|capturar}}, {{t+|pt|apanhar}}
 * Russian: {{t+|ru|захва́тывать|impf}}, {{t+|ru|захвати́ть|pf}}, {{t+|ru|схва́тывать|impf}}, {{t+|ru|схвати́ть|pf}}
+* Sanskrit: {{t+|sa|घिण्णते}}
 * Shan: {{t|shn|ယွပ်း}}
 * Spanish: {{t+|es|agarrar}}, {{t|es|[[apoderarse]] [[de]]}}, {{t+|es|apresar}}, {{t+|es|aferrar}}
 * Swedish: {{t+|sv|gripa}}, {{t+|sv|fånga}}, {{t+|sv|tillskansa}}
