--- a/en/s/sparra.720255.wikitext
+++ b/en/s/sparra.720255.wikitext
@@ -36,7 +36,8 @@
 ----
 
 ==Swedish==
-
+===Etymology===
+Possibly from {{der|sv|non|sperrask||to kick out}}.<ref>{{R:OED}}</ref>  However, possibly instead derived from {{der|sv|frm|esparer||to kick}}, from old {{der|sv|it|sparare||to fling}}, from {{der|sv|la|exparare}}, from {{m|la|ex-}} + {{m|la|parare||to prepare}}.<ref>{{R:American_Heritage_Dictionary|spar}}</ref><ref>{{R:Online_Etymology_Dictionary|spar}}</ref>  See also {{cog|en|parry}}.
 ===Verb===
 {{sv-verb-reg}}
 
@@ -47,3 +48,6 @@
 
 ===Anagrams===
 * {{anagrams|sv|a=aaprrs|rapars|raspar|sparar}}
+
+===References===
+<references/>
