/* Translations */ Added Sanskrit translation of this word. <blow#59472651>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -186,6 +186,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * Romanian: {{t+|ro|sufla}}
 * Romansch: {{t|rm|sufflar}}, {{t|rm|buffar}}, {{t|rm|zuflar}}, {{t|rm|zufler}}, {{t|rm|bufar}}, {{t|rm|sofflar}}, {{t|rm|boffar}}
 * Russian: {{t+|ru|дуть|impf}}, {{t+|ru|ду́нуть|pf}}, {{t+|ru|поду́ть|pf}}, {{t+|ru|ве́ять|impf}}, {{t+|ru|пове́ять|pf}}, {{t+|ru|сморка́ться|impf}}, {{t+|ru|сморкну́ться|pf}} ''blow the nose''
+* Sanskrit: {{t+|sa|वाति}}
 * Scottish Gaelic: {{t|gd|sèid}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|ду́вати|impf}} {{qualifier|Bosnian, Serbian}}, {{t|sh|ду́хати|impf}} {{qualifier|Croatian}}
