--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -315,6 +315,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 *: Nynorsk: {{t|nn|kurve|f}}
 * Occitan: {{t|oc|corba|f}}
 * Portuguese: {{t+|pt|curva|f}}
+* Sanskrit: {{t+|sa|अङ्कस्|n}}
 * Scottish Gaelic: {{t|gd|bogha|f}}, {{t|gd|lùb|f}}, {{t|gd|bogha|m}}
 * Slovene: {{t|sl|zavoj|m}}
 * Spanish: {{t+|es|curva|f}}, {{t+|es|recodo|m}}
