--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -19,7 +19,7 @@ From the prefix {{m|en|mega-}}, from {{der|en|grc|μέγας|t=great, large, mig
 #* '''1998''', John Barwick, ''Targeting Text'' (page 25)
 #*: We had a '''mega''' time until Peter fell in the fish pond and cut his leg.
 #* {{quote-book|en|year=2011|author=Anna Wilson|title=Pup Idol: Top of the Pups|passage=It was totally '''mega'''. The audience clapped and cheered when Teasel had finally finished. So did I.}}
-#* {{rfdatek|en|Liam Gallagher}}
+#* '''July 15, 2011''', {{w|Liam Gallagher}}, quoted at the launch of the new {{w|Manchester City F.C.}} kit
 #*: I've been a City fan since I was a kid, so to be involved with the launch of a new kit is colossal. Manchester City fans are known for having a lot of style and the new shirt looks '''mega'''.
 
 ====Related terms====
