--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -200,11 +200,18 @@ From {{inh|is|non|mega}}, from {{inh|is|gem-pro|*maganą}}, from {{der|is|ine-pr
 ===Etymology===
 From {{inh|id|ms|mega}}, from {{der|id|sa|मेघ|t=cloud}}.
 
+===Pronunciation===
+* {{IPA|id|[ˈmɛɡa]}}
+* {{hyphenation|id|mè|ga}}
+
 ===Noun===
-{{id-noun}}
+{{head|id|noun|head2=mèga}}
 
 # [[cloud]] {{gloss|visible mass of water droplets suspended in the air}}
 #: {{syn|id|awan}}
+
+===Further reading===
+* {{R:KBBI Daring}}
 
 ----
 
