--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -417,7 +417,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 ==Azerbaijani==
 
 ===Etymology===
-From {{inh|az|trk-pro|*ăt|t=horse}}.<ref>{{R:trk-pro:SDM|*ăt|855}}</ref>
+From {{inh|az|trk-pro|*at|t=horse}}.<ref>{{R:trk-pro:SDM|*ăt|855}}</ref>
 
 ===Noun===
 {{az-variant|c=ат|r=at|a=آت}}
