/* Proper noun */ <Transnistria#59519631>

--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -101,7 +101,7 @@ From {{bor|en|ro|Transnistria}}, from {{der|en|la|trans}} + {{der|en|ro|Nistru|t
 {{wikipedia|lang=eu}}
 
 ===Proper noun===
-{{head|eu|proper noun}}
+{{eu-proper noun|in}}
 
 # [[#English|Transnistria]]
 
