--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -23,7 +23,7 @@ From {{af|en|she-|goat}}.
 *: Ancient: {{t|grc|αἴξ|f}}
 {{trans-mid}}
 * Hebrew: {{t+|he|עז|tr=éz|f}}
-* Latin: {{t|la|capella|f}}, {{t|la|capella|f}}
+* Latin: {{t|la|capella|f}}
 * Low German: {{t|nds|Zeeg|f}}, {{t|nds|Zääg|f}}, {{t|nds|Seeg|f}}, {{t|nds|Sääg|f}}
 * Macedonian: {{t|mk|коза|f}}
 * Old Church Slavonic: {{t|cu|коза|f}}
@@ -31,6 +31,7 @@ From {{af|en|she-|goat}}.
 * Polish: {{t+|pl|koza|f}}
 * Portuguese: {{t+|pt|cabra|f}}
 * Russian: {{t+|ru|коза́|f}}
+* Sanskrit: {{t+|sa|अजा|f}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|kapar}}, {{qualifier|♂}} {{t+|vo|hikapar}}, {{qualifier|♀}} {{t+|vo|jikapar}}
 {{trans-bottom}}
 
