--- a/en/h/hander.4308.wikitext
+++ b/en/h/hander.4308.wikitext
@@ -21,7 +21,7 @@
 {{trans-bottom}}
 
 ===Etymology 2===
-{{suffix|en|hand|er|t1=noun}}
+{{suffix|en|hand|er|pos1=noun}}
 
 # {{qualifier|in combinations}} Something having, using, or requiring, a certain hand, or number of [[hand]]s
 #* {{quote-book|en|year=2010| author=Chris Lewit| title=Tennis Technique Bible| volume=One| passage=Two-'''handers''' generally do not transition to the net as quickly or as often as one-'''handers'''. This, to me, however, is just a coaching failure rather than a technical limitation.
