--- a/en/q/QALY.855221.wikitext
+++ b/en/q/QALY.855221.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
 ===Pronunciation===
-{{rfp|en}}
+* {{IPA|en|/ˈkwɑli/}}
 
 ===Noun===
 {{en-noun}}
 
-# {{initialism of|en|quality-adjusted life year}}
+# {{acronym of|en|quality-adjusted life year}}
