t+ja:[[だんな]] t-balance ([[WT:EDIT|Assisted]]) <sir#59530623>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -58,8 +58,9 @@ From {{inh|en|enm|sir}}, borrowed from {{der|en|fro|sire|t=master, sir, lord}}, 
 * Galician: {{t|gl|señor|m}}
 * Greek: {{t|el|Σέρ|m}}
 * Hungarian: {{t+|hu|úr}}
-* Latvian: {{t|lv|sers|m}}
+* Japanese: {{t|ja|だんな|tr=dan'na}}
 {{trans-mid}}
+* Latvian: {{t|lv|sers|m}}
 * Lithuanian: {{t|lt|ponas|m}}
 * Polish: {{t+|pl|pan|m}}
 * Portuguese: {{t+|pt|senhor|m}}
