--- a/en/b/BX.4329.wikitext
+++ b/en/b/BX.4329.wikitext
@@ -1,4 +1,17 @@
 {{also|Bx}}
+
+==Translingual==
+
+===Proper noun===
+{{head|mul|proper noun}}
+
+# The {{w|lang=en|World Meteorological Organization}} country code for {{l|en|Belgium}} and {{l|en|Luxembourg}}
+
+===See also===
+* U.N. WMO: [https://www.wmo.int/pages/prog/www/ois/Operational_Information/Publications/WMO_386/AHLsymbols/TableC1.html Table C1: Geographical designators A1A2 for use in abbreviated headings T1T2A1A2 ii CCCC YYGGgg]
+
+----
+
 ==English==
 {{wikipedia|lang=en}}
 
