/* Noun */ Add notes for quotations which are indexed in the Corpus of Contemporary American English. [[Wiktionary:Information_desk/2020/June#Citing_Corpus_of_Contemporary_American_English|Discussed here]] <thing#59539807>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -31,6 +31,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 |date=24 November 1993
 |medium=radio
 |text=Now I don't know how many of those male flight attendants are male lesbians -- you know... (Laughter) Well, it's a '''thing'''. I mean, there's a -- it's a -- there's a feminist professor down in Tampa who's discovered a male lesbian
+|footer=Accessed via [https://www.english-corpora.org/coca/ COCA]
 }}
 #* '''2014''', Marianna Papastephanou, ‎Torill Strand, ‎Anne Pirrie, ''Philosophy as a Lived Experience''
 #*: Frequent statements of the kind “'Race' is not a '''thing'''”, “'races,' put simply, do not exist”, “'race' (as each essay subtly shows) simply does not exist” aim to discredit Todorov's claim that a relapse to an ontology of race is at place {{...}}
@@ -51,12 +52,14 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 |title={{w|Geraldo (talk show)|Geraldo}}
 |text=And he invited us all in there and then he kicked the girls out a little bit later and brought me in a couple '''things''' of alcohol. And just before he brought in my second bottle of alcohol{{...}}
 |medium=television
+|footer=Accessed via [https://www.english-corpora.org/coca/ COCA]
 }}
 #* {{quote-av|en
 |year=2011
 |title={{w|We Were Here (film)|We Were Here}}
 |text=I remember my friend Ben saying in the old days that he would never go to Costco and buy one of those big '''things''' of toilet paper{{...}}
 |time=1:19:48
+|footer=Accessed via [https://www.english-corpora.org/coca/ COCA]
 }}
 #* '''2011''', Juliette Fay, ''Deep Down True: A Novel'', Penguin ({{ISBN|9781101486184}})
 #*: I came home and ate a whole '''thing''' of ice cream.
