t+tr:[[İyonya]] ([[WT:EDIT|Assisted]]) <Ionia#59539920>

--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -34,6 +34,7 @@ From {{etyl|grc|en}} {{m|grc|Ἰωνία}}.
 * Old Persian: {{t|peo|𐎹𐎢𐎴|ts=yauna|sc=Xpeo}}
 * Portuguese: {{t|pt|Iónia|f}} {{qualifier|Portugal}}, {{t|pt|Iônia|f}} {{qualifier|Brazil}}
 * Spanish: {{t|es|Jonia}}
+* Turkish: {{t|tr|İyonya}}
 {{trans-bottom}}
 
 ----
