/* Noun */ Update "fad" sense to indicate that it always occurs with "the" (not sure if formatting/placement is correct), and replace example sentence with two quotations. <thing#59542472>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -41,8 +41,11 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 # {{lb|en|legal}}
 ## Whatever can be [[own]]ed.
 ## [[corporeal|Corporeal]] [[object]].
-# {{lb|en|somewhat|_|dated}} The [[latest]] [[fad]] or [[fashion]].
-#: {{ux|en|What do you mean you don't twerk, Stacy? It's the latest '''thing'''!}}
+# {{lb|en|somewhat|_|dated|with ''the''}} The [[latest]] [[fad]] or [[fashion]].
+#* '''1802''', Anne Ormsby, "Memoirs of a Family in Swisserland", quoted in ''The Monthly Review, Or, Literary Journal'' [https://books.google.ca/books?id=H2FAAQAAMAAJ&pg=PA45 page 45]:
+#*: To go to bed late, to rise late, to breakfast late, to dine late, and to visit late, is  to be “quite the '''thing''',” or in good English, which you may understand better than the first phrase, to be in the fashion.
+#* '''2002''', Roger Nichols, ''The Harlequin Years: Music in Paris 1917-1929'', Univ of California Press ({{ISBN|9780520237360}})
+#*: After a slow start it became the '''thing''' to do; 'everyone went to see Pbi-Pbi, no one  talked of anything but Pbi-Pbi{{...}}'
 # {{lb|en|in the plural}} [[clothes|Clothes]], [[possessions]] or [[equipment]].
 #: {{ux|en|Hold on, let me just grab my '''things'''.}}
 # {{lb|en|informal}} A unit or container, usually containing edible goods.
