--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -26,6 +26,7 @@
 * Hebrew: {{t+|he|פולחן אישיות}}
 * Indonesian: {{t+|id|kultus individu}}
 {{trans-mid}}
+* Irish: {{t|ga|cultas pearsan|m}}
 * Japanese: {{t|ja|個人崇拝|tr=こじんすうはい, kojin sūhai|sc=Jpan}}
 * Korean: {{t|ko|개인숭배|sc=Kore}}
 * Kurdish: {{t+|ku|kulta şexsiyetek|sc=ku-Arab}}
