--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -111,7 +111,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 * Polish: {{t+|pl|krwawić}}
 * Portuguese: {{t+|pt|sangrar}}
 * Romanian: {{t+|ro|sângera}}
-* Russian: {{t+|ru|кровоточи́ть}} (seldom used, {{t|ru|име́ть кровотече́ние}}, {{t|ru|идёт кровь}})
+* Russian: {{t+|ru|кровоточи́ть}} (seldom used, {{t|ru|име́ть кровотече́ние}}, {{t|ru|идёт кровь}}), {{t|ru|истека́ть кро́вью}}
 * Sardinian: {{t|sc|sambenàre}}, {{t|sc|sambenàri}}, {{t|sc|sanguinai}}
 * Scottish Gaelic: {{t|gd|leig fuil}}, {{qualifier|nose}} {{t|gd|leum}}
 * Serbo-Croatian:
@@ -148,6 +148,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 * Latin: {{t|la|dēpleō}}, {{t|la|phlebotomō}}
 * Mongolian: {{t+|mn|цуслах}}
 * Portuguese: {{t+|pt|sangrar}}
+* Russian: {{t|ru|пусти́ть кровь|pf}}, {{t|ru|пуска́ть кровь|impf}}, {{t|ru|проли́ть кровь|pf}}, {{t|ru|пролива́ть кровь|impf}}
 * Spanish: {{t+|es|desangrar}}
 * Tagalog: {{t|tl|duguan}}
 {{trans-bottom}}
