--- a/en/s/sparra.720255.wikitext
+++ b/en/s/sparra.720255.wikitext
@@ -23,10 +23,7 @@
 ==Scots==
 
 ===Alternative forms===
-* {{l|sco|spur}}
-* {{l|sco|spug}}
-* {{l|sco|spuggie}}
-* {{l|sco|speug}}
+* {{alter|sco|spur|spug|spuggie|speug}}
 
 ===Noun===
 {{sco-noun}}
