--- a/en/d/durva.855097.wikitext
+++ b/en/d/durva.855097.wikitext
@@ -7,6 +7,7 @@
 * {{hu-IPA}}
 * {{audio|hu|Hu-durva.ogg|Audio}}
 * {{hyphenation|hu|dur|va}}
+* {{rhymes|hu|vɒ}}
 
 ===Adjective===
 {{hu-adj|comp=durvább}}
