/* Translations */Fixed Sicilian <pig#59583984>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -312,7 +312,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 *: Roman: {{t+|sh|svínja|f}}
 * Shan: {{t|shn|မူ}}
 * Sichuan Yi: {{t|ii|ꃮ}}, {{t|ii|ꃢ}} {{qualifier|literary}}
-* Sicilian: {{t+|scn|porcu|m}}, {{t+|scn|poccu|m}}, {{t+|scn|maiali|m}}, {{t+|scn|majali|m}}
+* Sicilian: {{t+|scn|porcu|m}},  {{t+|scn|majali|m}}
 * Sinhalese: {{t+|si|ඌරා}}
 * Slovak: {{t+|sk|prasa|n}}, {{t+|sk|sviňa|f}}
 * Slovene: {{t+|sl|svinja|f}}, {{t+|sl|prašič|m}}, {{t|sl|pujs|m}}
