--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -224,6 +224,12 @@ From {{m|hu|benn}}, following the example of {{m|hu|alant}} and {{m|hu|lent}}.<r
 
 ===References===
 <references/>
+----
+
+==Lithuanian==
+
+===Adverb===
+# at least.
 
 ----
 
