--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -112,29 +112,24 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 ==Danish==
 
 ===Pronunciation===
-* {{IPA|da|/behɔl/|[b̥eˈhʌlˀ]}}
+* {{IPA|da|[b̥eˈhʌlˀ]}}
 
 ===Etymology 1===
-From {{der|da|gml|beholt}}, {{m|gml|behalt}}.
+From {{der|da|gml|beholt}}, {{m|gml|behalt}}, from the verb {{m|gml|beholden}}, see {{m|da|beholde}}.
 
 ====Noun====
-{{head|da|noun|indeclinable}}
+{{head|da|noun|g=c|uninflected}}
 
 # {{lb|da|archaic}} [[haven]], [[refuge]]
-#: ''i behold'' – [[safe]], [[intact]], [[left]] {{gloss|remaining}}
-#: ''i god behold'' – [[safe]], [[safely]], [[safe and sound]], safe and [[well]]
-
-=====Derived terms=====
-* {{l|da|i behold}}
-* {{l|da|i god behold}}
+#: in the phrases {{l|da|i behold|gloss=intact}} and {{l|da|i god behold|gloss=safe}}
 
 ===Etymology 2===
-See {{m|da|beholde||to keep}}
+{{nonlemma}}
 
 ====Verb====
 {{head|da|verb form}}
 
-# {{imperative of|da|beholde}}
+# {{inflection of|da|beholde||imp}}
 
 ----
 
