--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -14,9 +14,9 @@
 * {{homophones|en|rabbet}}
 
 ===Etymology 1===
-From {{inh|en|enm|rabet}}, {{m|enm|rabette}}, from {{der|en|frm|*robotte}}, {{m|frm|*rabotte }}, from dialectal {{der|en|fro|rabotte}}, probably a diminutive of {{der|en|dum|-}} or {{der|en|vls|robbe}}, perhaps related to {{m|nl|robbe||seal}}, itself of uncertain origin.
+From {{inh|en|enm|rabet}}, {{m|enm|rabette}}, from {{der|en|frm|*robotte}}, {{m|frm|*rabotte }}, from dialectal {{der|en|fro|rabotte}}, probably a diminutive of {{der|en|dum|-}} or {{der|en|vls|robbe}}, perhaps related to {{m|nl|robbe||seal}}, itself of uncertain origin; possibly some {{onomatopoeic|en|title=imitative}} verb, maybe {{m|dum|robben}}, {{m|gml|rubben|t=to rub}} is used here to allude to a characteristic of the animal.  See {{m|en|rub}}.
 
-Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot|t=plane}}), coming via {{cog|wa|-}} {{der|en|fro|-}} (reflected nowadays as {{cog|wa|robète|t=rabbit}}), from {{der|en|dum|robbe|t=rabbit; seal}}; also {{cog|gml|robbe}}, {{m|gml|rubbe|t=rabbit}}, and the later {{cog|nds|Rubbe|t=seal}}, {{cog|fy|robbe|t=seal}}, {{cog|stq|robbe|t=seal}}, {{cog|frr|rob|t=seal}}, borrowed into {{cog|de|Robbe|t=seal}}, but is of uncertain motivation; some {{onomatopoeic|en|title=imitative}} verb, maybe {{m|dum|robben}}, {{m|gml|rubben|t=to rub}} is used here to allude to a characteristic of the animal.  See {{m|en|rub}}.
+Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot|t=plane}}), coming via {{cog|wa|-}} {{der|en|fro|-}} (reflected nowadays as {{cog|wa|robète|t=rabbit}}), from {{der|en|dum|robbe|t=rabbit; seal}}; also {{cog|gml|robbe}}, {{m|gml|rubbe|t=rabbit}}, and the later {{cog|nds|Rubbe|t=seal}}, {{cog|fy|robbe|t=seal}}, {{cog|stq|robbe|t=seal}}, {{cog|frr|rob|t=seal}}, borrowed into {{cog|de|Robbe|t=seal}}.
 
 ====Noun====
 {{en-noun|~}}
