--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -97,6 +97,10 @@ Imitative.
 ===Etymology===
 {{bor|de|la|quā}}
 
+===Pronunciation===
+* {{IPA|de|/kvaː/}}
+* {{audio|de|De-qua.ogg}}
+
 ===Preposition===
 {{head|de|preposition}}
 
@@ -105,6 +109,10 @@ Imitative.
 #: {{uxi|de|'''qua''' Gesetz|'''by''' law}}
 #* '''2018''', Kevin Rick, ''Verbraucherpolitik in der Bundesrepublik Deutschland'', Nomos Verlag ({{ISBN|9783845286914}}), page {{gbooks|uxB4DwAAQBAJ|84}}:
 #*: Die Regierung von Individuen oder Kollektiven, sei es '''qua''' Verordnung oder '''qua''' Appell, ist deshalb stets an das „Regieren des Selbst“ gekoppelt, an durch das Subjekt aktiv anzueignende Selbsttechniken bzw. Technologien des Selbst.
+
+====Usage notes====
+Sometimes used with the genitive:
+: {{uxi|de|qua Amtes|by office}}
 
 ===Further reading===
 * {{R:Duden|qua_mithilfe_durch_entsprechend}}
