--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology 1===
-From {{etyl|la|en}} {{m|la|qua||in the capacity of}}.
+From {{bor|en|la|quā||in the capacity of}}.
 
 ====Pronunciation====
 * {{IPA|en|/kwɑː/|/kweɪ/}}
