--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -208,7 +208,7 @@ Adverb declined from {{m|la|quī}}.
 # On [[which]] side, at or in [[which]] place, in [[what]] direction, [[where]], by what way (qua...ea...)
 # [[as]]; in the capacity or character of
 # In [[so]] far as
-#: ''ens qua ens'' ("being as being")
+#: {{uxi|la|ens '''qua''' ens|being '''as''' being}}
 # In what way, [[how]], by what method; to what degree or extent
 
 ====Related terms====
