/* Derived terms */ <genet#59602409>

--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -22,21 +22,22 @@ From {{etyl|xno|en}} {{m|fro|genette}}, {{etyl|frm|en}} {{m|frm|genette}}, {{m|f
 =====Derived terms=====
 * {{vern|common genet}} ({{taxlink|Genetta genetta|species|ver=200623}})
 * {{vern|Abyssinian genet}} ({{taxlink|Genetta abyssinica|species|ver=200623}})
-* {{vern|Angolan genet}}
-* {{vern|aquatic genet}}
-* {{vern|Bourlon's genet}}
-* {{vern|Cape genet}}
+* {{vern|Angolan genet}} ({{taxlink|Genetta angolensis|species|ver=200623}})
+* {{vern|aquatic genet}} ({{taxlink|Genetta piscivora|species|ver=200623}})
+* {{vern|Bourlon's genet}} ({{taxlink|Genetta bourlonii|species|ver=200623}})
+* {{vern|Cape genet}} ({{taxlink|Genetta tigrina|species|ver=200623}})
 * {{vern|Ethiopian genet}} ({{taxlink|Genetta abyssinica|species|ver=200623}})
 * {{vern|European genet}} ({{taxlink|Genetta genetta|species|ver=200623}})
-* {{vern|giant genet}}, [[giant forest genet]]
-* {{vern|Haussa genet}}
-* {{vern|Johnston's genet}}
-* {{vern|king genet}}
-* {{vern|large-spotted genet}}
-* {{vern|panther genet}}
-* {{vern|pardine genet}}
-* {{vern|rusty-spotted genet}}
-* {{vern|servaline genet}}
+* {{vern|giant genet}}, [[giant forest genet]] ({{taxlink|Genetta victoriae|species|ver=200623}})
+* {{vern|Haussa genet}} ({{taxlink|Genetta thierryi|species|ver=200623}})
+* {{vern|Johnston's genet}} ({{taxlink|Genetta johnstoni|species|ver=200623}})
+* {{vern|king genet}} ({{taxlink|Genetta poensis|species|ver=200623}})
+* {{vern|large-spotted genet}} ({{taxlink|Genetta tigrina|species|ver=200623}})
+* {{vern|miombo genet}} ({{taxlink|Genetta angolensis|species|ver=200623}})
+* {{vern|panther genet}} ({{taxlink|Genetta maculata|species|ver=200623}})
+* {{vern|pardine genet}} ({{taxlink|Genetta pardina|species|ver=200623}})
+* {{vern|rusty-spotted genet}} ({{taxlink|Genetta maculata|species|ver=200623}})
+* {{vern|servaline genet}} ({{taxlink|Genetta servalina|species|ver=200623}})
 * {{vern|small-spotted genet}} ({{taxlink|Genetta genetta|species|ver=200623}})
 
 =====Translations=====
