--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -53,6 +53,8 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Albanian: {{t+|sq|mjekër|f}}
 * Alemannic German: {{t|gsw|Koi}} {{qualifier|Swiss}}, {{t|gsw|Kehn}} {{qualifier|Alsatian}}
 * Amharic: {{t|am|ሸንጎበት|sc=Ethi}}, {{t|am|አገጭ|sc=Ethi}}
+* Apache:
+*: Western Apache: {{t|apw|biyedaa’}}
 * Arabic: {{t+|ar|ذَقْن|f}}
 *: Egyptian Arabic: {{t|arz|دقن|tr=daʾn|sc=Arab}}
 * Aragonese: {{t|an|mentón|m}}, {{t|an|barbeta|f}}
