--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -16,7 +16,7 @@ From {{etyl|xno|en}} {{m|fro|genette}}, {{etyl|frm|en}} {{m|frm|genette}}, {{m|f
 ====Noun====
 {{en-noun|~}}
 
-# Any of several [[Old World]] [[nocturnal]], [[carnivorous]] [[mammal]]s, of the genus {{taxlink|Genetta|genus}} in the family [[Viverridae]], most of which have a spotted coat and a long, ringed tail.
+# Any of several [[Old World]] [[nocturnal]], [[carnivorous]] [[mammal]]s, of the genus ''[[Genetta]]'' in the family [[Viverridae]], most of which have a spotted coat and a long, ringed tail.
 # The [[fur]] of this mammal, or any skin dressed in imitation of it.
 
 =====Derived terms=====
