--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -15,7 +15,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 #* {{rfdatek|en|Sir Philip Sidney}}
 #*: The diligent pilot in a dangerous tempest doth not '''attend''' the unskilful words of the passenger.
 # {{lb|en|archaic|intransitive}} To [[listen]] ({{m|en|to}}, {{m|en|unto}}). {{defdate|from 15th c.}}
-#* {{rfdatek|en|Rudyard Kipling}}, ''The Beginning of the Armadillos''
+#* '''1912''', {{w|Rudyard Kipling}}, ''[[s:The Beginning of the Armadillos|The Beginning of the Armadillos]]''
 #*: 'Now '''attend''' to me,' said Painted Jaguar, 'because this is very important. {{...}}
 # {{senseid|en|to turn one's consideration to, deal with}}{{lb|en|intransitive}} To turn one's [[consideration]] ({{m|en|to}}); to [[deal]] with (a task, problem, concern etc.), to look after. {{defdate|from 15th c.}}
 #: {{ux|en|Secretaries '''attend''' to correspondence.}}
@@ -37,13 +37,13 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 #* {{quote-web|en|author=Prince Edward Island Court of Appeal| work=R. v. Yeo| url=http://canlii.ca/t/gnr68| year=2016| accessdate=2016-05-08| passage=There were a few errors in the testimony of [a civilian witness] which the trial judge noted – one, that they '''attended''' at the Fairhurst residence the day before the robbery, and two, that Wakelin was with them.}}
 # To be present with; to accompany; to be united or consequent to.
 #: {{ux|en|a measure '''attended''' with ill effects}}
-#* {{rfdatek|en|John Dryden}}
+#* '''1697''', {{w|John Dryden}}, ''The Georgics''
 #*: What cares must then '''attend''' the toiling swain.
 #* {{quote-book|en|year=1922| author={{w|Ben Travers}}| chapter=5| title=[http://openlibrary.org/works/OL1521052W A Cuckoo in the Nest]| passage=The most rapid and most seductive transition in all human nature is that which '''attends''' the palliation of a ravenous appetite. There is something humiliating about it.{{...}}Can those harmless but refined fellow-diners be the selfish cads whose gluttony and personal appearance so raised your contemptuous wrath on your arrival?}}
 # To wait for; to await; to remain, abide, or be in store for.
-#* {{rfdatek|en|John Locke}}
-#*: the state that '''attends''' all men after this
-#* {{rfdatek|en|John Dryden}}
+#* {{RQ:Locke Human}}
+#*: the different state of perfect happiness or misery that '''attends''' all men after this
+#* {{RQ:Dryden The Indian Emperor}}
 #*: Three days I promised to '''attend''' my doom.
 
 =====Synonyms=====
