--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -64,6 +64,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 * Albanian: {{t+|sq|thjeshtë}}
 * Arabic: {{t+|ar|بَسِيط}}, {{t+|ar|سَهْل}} {{qualifier|easy}}
 *: Egyptian Arabic: {{t|arz|بسيط|tr=basīṭ}}
+*: Hijazi Arabic: {{t|acw|بَسِيط|tr=basīṭ}}, {{t+|ar|سَهَل|tr=sahal}} {{qualifier|easy}}
 * Aragonese: {{t+|an|simple}}
 * Armenian: {{t+|hy|պարզ}}, {{t+|hy|հասարակ}}
 * Assamese: {{t|as|সৰল}}, {{t|as|সহজ}}
