--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -57,6 +57,7 @@ From {{inh|en|enm|bound}}, {{m|enm|bund|pos=preterite}} and {{m|enm|bounden}}, {
 |snowbound
 |soulbound
 |strikebound
+|[[timebound]], [[time-bound]]
 |weatherbound
 |weather-bound
 |wheelchair-bound
