--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -45,6 +45,8 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * Finnish: {{qualifier|1}} {{t+|fi|katsoa}}
 * French: {{t+|fr|regarder}}, {{t+|fr|voir}}, {{t+|fr|observer}}
 * German: {{t+|de|betrachten}}, {{t+|de|sehen}}, {{t+|de|schauen}}, {{t+|de|anschauen}}, {{t+|de|ansehen}}
+* Greek:
+*: Ancient: {{t+|grc|σκοπέω}}
 * Hebrew: {{t+|he|הִנֵּה|tr=hiné|sc=Hebr}}, {{t|he|הֲרֵי|tr=haréi}}
 * Hungarian: {{t+|hu|meglát}}, {{t+|hu|észrevesz}}, {{t+|hu|megpillant}}
 * Icelandic: {{t+|is|sjá}}
