--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -83,6 +83,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 |rolling mill
 |run-of-the-mill
 |[[rumor mill]], [[rumour mill]]
+|Sea Mills
 |steel mill
 |Temple Mills
 |tide mill
