--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -40,6 +40,7 @@
 * Serbo-Croatian: {{t-needed|sh}}
 * Spanish: {{t|es|culto a la personalidad|m}}
 * Swedish: {{t+|sv|personkult|c}}
+* Thai: {{t-needed|th}}
 * Turkish: {{t-needed|tr}}
 * Ukrainian: {{t|uk|культ осо́би|m|sc=Cyrl}}
 {{trans-bottom}}
