/* 1.2.1 Translations */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <cult of personality#59629784>

--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -24,7 +24,7 @@
 * French: {{t+|fr|culte de la personnalité|m}}
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|Personenkult|m}}
-* Hebrew: {{t+|he|פולחן אישיות}}
+* Hebrew: {{t+|he|פולחן אישיות|tr=pulkhán isiyút}}
 * Hungarian: {{t+|hu|személyi kultusz}}
 * Indonesian: {{t+|id|kultus individu}}
 {{trans-mid}}
