--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -24,7 +24,7 @@
 * French: {{t+|fr|culte de la personnalité|m}}
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|Personenkult|m}}
-* Hebrew: {{t+|he|פולחן אישיות|tr=pulkhán isiyút}}, {{t+|he|פולחן אישיות|m|tr=pulkhán isiyút|alt=פֻּלְחָן אִישִׁיּוּת}}
+* Hebrew: {{t+|he|פולחן אישיות|m|tr=pulkhán isiyút|alt=פֻּלְחָן אִישִׁיּוּת}}
 * Hungarian: {{t+|hu|személyi kultusz}}
 * Indonesian: {{t+|id|kultus individu}}
 {{trans-mid}}
