t+ga:[[cuibhrigh]] t-balance ([[WT:EDIT|Assisted]]) <bind#59643527>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -106,12 +106,13 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 * Hindi: {{t|hi|छांदना}}
 * Icelandic: {{t+|is|binda}}
 * Interlingue: {{t|ie|ligar}}
+* Irish: {{t|ga|cuibhrigh}}
 * Japanese: {{t|ja|縛る|tr=しばる, shibaru}}
 * Khmer: {{t+|km|ចង}}
 * Korean: {{t+|ko|묶다}}
 * Lao: {{t|lo|ຈອງ}}
-* Latin: {{t+|la|ligō}}
 {{trans-mid}}
+* Latin: {{t+|la|ligō}}
 * Low German:
 *: German Low German: {{t+|nds-de|binnen}}
 * Malay: {{t|ms|ikat}}
