--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -25,7 +25,7 @@ From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{der|en|fro|martrine||mart
 =====Translations=====
 {{trans-top|mammal}}
 * Abkhaz: {{t|ab|цыҕ|sc=Cyrl}}
-* Albanian: {{t|sq|zardafi}}
+* Albanian: {{t|sq|zardafi}}, {{t+|sq|zardaf|m}}
 * Algonquin: {{t|alq|wàbicèsè}}
 * Armenian: {{t+|hy|կզաքիս}}
 * Bashkir: {{t|ba|һыуһар}}
