--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -25,6 +25,7 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 #: {{ux|en|These are the ties that '''bind'''.}}
 # {{lb|en|transitive}} To [[tie]] or [[fasten]] tightly together, with a cord, band, ligature, chain, etc.
 #: {{ux|en|to '''bind''' grain in bundles&emsp; to '''bind''' a prisoner}}
+#: {{syn|en|fetter|make fast|tie|fasten|restrain}}
 # {{lb|en|transitive}} To confine, restrain, or hold by physical force or influence of any kind.
 #: {{ux|en|Gravity '''binds''' the planets to the sun.}}
 #: {{ux|en|Frost '''binds''' the earth.}}
@@ -37,14 +38,17 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 #* {{quote-book|en|author={{w|William Roper}}| title=The Mirrour of Vertue in Worldly Greatnes. Or The Life of Syr Thomas More Knight, sometime Lo. Chancellour of England| location=Paris [''i.e.'' Saint-Omer]| publisher=[Printed at the English College Press]| year=1626| oclc=837637215| author2=S. W. Singer| title2=The Life of Sir Thomas More, by His Son-in-law, William Roper, Esq.{{nb...|With Notes, and an Appendix of Letters. A New Edition, Revised and Corrected, by S. W. Singer.}}| edition=new revised and corrected| location2=Chiswick, London| publisher2=From the press of [[w:Charles Whittingham|C[harles] Whittingham]], for R. Triphook,{{nb...|Old Bond Street, London}}| year2=1822| page2=36| pageurl2=https://books.google.com/books?id=ZlpMAAAAcAAJ&pg=PA36| oclc2=54291031| passage=In the concluding whereof Sir {{w|Thomas More}} so worthily handled himself, procuring in our league far more benefits unto this realm, than at that time, by the king or his council was thought possible to be compassed, that for his good service in that voyage, the king, when he after made him Lord Chancellor, caused the Duke of Norfolk openly to declare to the people, as you shall hear hereafter more at large, how much all England was '''bounden''' unto him.}}
 #* {{RQ:Milton Paradise Regained|Samson Agonistes|25|line=310|passage=Who made our Laws to '''bind''' us, not himſelf,}}
 #* {{quote-book|en|author={{w|William A. Owens}}| chapter=2| title=Look to the River| location=New York, N.Y.| publisher=[[w:Atheneum Books|Atheneum]]| year=1963| oclc2=933573| title2=Look to the River| series2=Texas Tradition Series| seriesvolume2=8| location2=Fort Worth, Tex.| publisher2={{w|Texas Christian University Press}}| year2=1988| page2=20| pageurl2=https://books.google.com/books?id=vpU2AYD6WEkC&pg=PA20| isbn2=978-0-87565-076-0| passage=He'll mind, I reckon, not getting any work out'n me, but I won't be '''bounden''' to him any longer. How can he keep me if I ain't '''bounden''' to him?}}
+#: {{syn|en|restrain|restrict|obligate}}
 # {{lb|en|law}} To put (a person) under definite legal obligations, especially, under the obligation of a bond or covenant.
 # {{lb|en|law}} To place under legal obligation to serve.
 #: {{ux|en|to '''bind''' an apprentice&emsp; '''bound''' out to service}}
+#: {{syn|en|indenture}}
 # {{lb|en|transitive}} To protect or strengthen by applying a band or binding, as the edge of a carpet or garment.
 # {{lb|en|transitive|archaic}} To make fast (a thing) about or upon something, as by tying; to encircle with something.
 #: {{ux|en|to '''bind''' a belt about one&emsp; to '''bind''' a compress upon a wound}}
 # {{lb|en|transitive}} To cover, as with a bandage.
 #: {{ux|en|to '''bind''' up a wound}}
+#: {{syn|en|bandage|dress}}
 # {{lb|en|transitive|archaic}} To prevent or restrain from customary or natural action, as by producing [[constipation]].
 #: {{ux|en|Certain drugs '''bind''' the bowels.}}
 # {{lb|en|transitive}} To put together in a cover, as of books.
@@ -57,15 +61,8 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 # {{lb|en|UK|dialect}} To [[complain]]; to [[whine]] about something.
 #* {{quote-book|en|year=1980|author=Iris Murdoch|title=Nuns And Soldiers|passage="But it's not much good piling up the pix if I can't sell them."<br>"Oh do stop '''binding'''. Think of something. How will we eat, where will we sleep?"}}
 
-====Synonyms====
-* {{sense|''transitive'' tie or fasten together}} {{l|en|fetter}}, {{l|en|make fast}}, {{l|en|tie}}, {{l|en|fasten}}, {{l|en|restrain}}
-* {{sense|''transitive'' cover with a bandage}} {{l|en|bandage}}, {{l|en|dress}}
-* {{sense|''transitive'' oblige}} {{l|en|restrain}}, {{l|en|restrict}}, {{l|en|obligate}}
-* {{sense|''transitive, legal'' put under legal obligation}}
-* {{sense|''transitive, legal'' place under obligation to serve}} {{l|en|indenture}}
-
 ====Derived terms====
-{{der4|en
+{{col3|en
 |bind over
 |bind to
 |bind up
@@ -100,7 +97,7 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 * German: {{t+|de|binden}}
 *: Middle High German: {{t|gmh|binden}}
 *: Old High German: {{t|goh|bintan}}
-* Gothic: {{t|got|𐌱𐌹𐌽𐌳𐌰𐌽|sc=Goth}}
+* Gothic: {{t|got|𐌱𐌹𐌽𐌳𐌰𐌽}}
 * Greek:
 *: Ancient: {{t|grc|δέω}}
 * Hindi: {{t|hi|छांदना}}
@@ -150,12 +147,12 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 {{trans-top|''transitive'' connect}}
 * Albanian: {{t+|sq|lidh}}
 * Arabic: {{t|ar|رَبَطَ}}
-*: Egyptian Arabic: {{t|arz|ربط|tr=rabaṭ|sc=Arab}}, {{t|arz|وصل|tr=waṣal|sc=Arab}}
-* Belarusian: {{t|be|вяза́ць|sc=Cyrl}}
+*: Egyptian Arabic: {{t|arz|ربط|tr=rabaṭ}}, {{t|arz|وصل|tr=waṣal}}
+* Belarusian: {{t|be|вяза́ць}}
 * Bulgarian: {{t+|bg|свързвам}}
 * Catalan: {{t+|ca|lligar}}
 * Chinese:
-*: Mandarin: {{t+|cmn|包紮|sc=Hani}}, {{t+|cmn|包扎|tr=bāozhā, bāozā|sc=Hani}}, {{t+|cmn|捆|tr=kǔn|sc=Hani}}, {{t+|cmn|綁|sc=Hani}}, {{t+|cmn|绑|tr=bǎng|sc=Hani}}
+*: Mandarin: {{t+|cmn|包紮}}, {{t+|cmn|包扎|tr=bāozhā, bāozā}}, {{t+|cmn|捆|tr=kǔn}}, {{t+|cmn|綁}}, {{t+|cmn|绑|tr=bǎng}}
 * Crimean Tatar: {{t|crh|bint}}
 * Czech: {{t|cs|vázat}} {{qualifier|by a promise}}
 * Danish: {{t|da|forbinde}}
@@ -166,7 +163,7 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 * Friulian: {{t|fur|leâ}}
 * German: {{t+|de|verbinden}}, {{t|de|konnektieren}}
 * Greek:
-*: Ancient: {{t|grc|δέω|sc=polytonic}}
+*: Ancient: {{t|grc|δέω}}
 * Hungarian: {{t+|hu|összeköt}}
 * Ido: {{t+|io|bindar}}
 * Indonesian: {{t+|id|ikat}}, {{t+|id|sambung}}, {{t+|id|hubung}}
@@ -179,7 +176,7 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 *: Mooring: {{t|frr|ferbine}}
 * Norwegian: {{t+|no|binde}}
 * Occitan: {{t+|oc|ligar}}
-* Old Church Slavonic: {{t|cu|вѧсти|sc=Cyrs}}
+* Old Church Slavonic: {{t|cu|вѧсти}}
 * Portuguese: {{t+|pt|conectar}}, {{t+|pt|juntar}}, {{t+|pt|copular}}, {{t+|pt|ligar}}
 * Romanian: {{t+|ro|cupla}}, {{t+|ro|conecta}}, {{t+|ro|lega}}
 * Russian: {{t+|ru|вяза́ть|impf}}, {{t+|ru|свя́зывать|impf}}, {{t+|ru|связа́ть|pf}}
@@ -199,7 +196,7 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 * French: {{t+|fr|coupler}}, {{t+|fr|lier}}
 * German: {{t+|de|verbinden}}
 * Greek:
-*: Ancient: {{t|grc|δέω|sc=polytonic}}
+*: Ancient: {{t|grc|δέω}}
 {{trans-mid}}
 * Italian: {{t+|it|connettere}}
 * Portuguese: {{t+|pt|acoplar}}
@@ -218,9 +215,9 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 * Finnish: {{t+|fi|sitoa}}
 * French: {{t+|fr|relier}}
 * German: {{qualifier|z.B. ein Buch}} {{t+|de|binden}}
-* Greek: {{t+|el|βιβλιοδετώ|sc=Grek}}
+* Greek: {{t+|el|βιβλιοδετώ}}
 * Italian: {{t|it|rilegare}}
-* Japanese: {{t|ja|綴じる|tr=とじる, tojiru|sc=Jpan}}
+* Japanese: {{t|ja|綴じる|tr=とじる, tojiru}}
 * Lithuanian: {{t|lt|rišti}}
 {{trans-mid}}
 * Maori: {{t|mi|paihere}}
