--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -55,7 +55,7 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*
 
 ====Translations====
 {{trans-top|least weasel, ''Mustela nivalis''}}
-* Albanian: {{t+|sq|nuselalë|f}}
+* Albanian: {{t+|sq|nuselalë|f}}, {{t+|sq|bukël|f}}
 * Algonquin: {{t|alq|cigosi}}
 * Arabic: {{t|ar|اِبْن عِرْس|m}}
 *: Moroccan Arabic: {{t|ary|فارة الخيل|f|tr=farat el-khil}} {{qualifier|lit. horse-mouse}}
