--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -1,6 +1,5 @@
 ==English==
-{{wikipedia}}
-[[Image:Ilder.jpg|thumb|'''ferrets''' (''[[Mustela putorius furo]]'')]]
+[[File:Ilder.jpg|thumb|ferrets (''[[Mustela putorius furo]]'')]]
 
 ===Pronunciation===
 * {{enPR|fĕr'ət}}, {{IPA|en|/ˈfɛɹɪt/}}
@@ -9,16 +8,16 @@
 
 ===Etymology 1===
 {{PIE root|en|bʰer}}
-From {{der|en|enm|furet}}, {{m|enm|ferret}}, from {{der|en|fro|furet}}, from {{der|en|VL.|*furittum||weasel, ferret}}, diminutive of {{der|en|la|fūr||thief}}.
+From {{inh|en|enm|furet}}, {{m|enm|ferret}}, from {{der|en|fro|furet}}, from {{der|en|VL.|*furittum||weasel, ferret}}, diminutive of {{der|en|la|fūr||thief}}.
 
 ====Noun====
 {{en-noun}}
 
 # An often domesticated [[mammal]] (''[[Mustela putorius furo]]'') rather like a [[weasel]], descended from the [[polecat]] and often trained to [[hunt]] [[burrow]]ing animals.
 # The {{vern|black-footed ferret}}, {{taxlink|Mustela nigripes|species|noshow=1|ver=161101}}.
-# A [[diligent]] [[searcher]].
+# {{lb|en|figurative}} A [[diligent]] [[searcher]].
 #* '''1998''' July 2, {{w|Charles Nicholl}}, "Screaming in the Castle" in the ''London Review of Books'', Vol. XX, No. 13:
-#*: The most challenging documentary discoveries were made by a tenacious archival [[ferret]], Dr Antonio Bertoletti. In 1879 he published his findings in a slim, refreshingly dry volume, ''{{w|Francesco Cenci}} e la sua Famiglia''.
+#*: The most challenging documentary discoveries were made by a tenacious archival '''ferret''', Dr Antonio Bertoletti. In 1879 he published his findings in a slim, refreshingly dry volume, ''Francesco Cenci e la sua Famiglia''.
 
 =====Related terms=====
 * {{l|en|ferret-badger}}
@@ -101,12 +100,11 @@ From {{der|en|enm|furet}}, {{m|enm|ferret}}, from {{der|en|fro|furet}}, from {{d
 {{en-verb}}
 
 # To hunt [[game]] with ferrets.
-# {{lb|en|ambitransitive}} To [[uncover]] and bring to [[light]] by [[searching]]; usually to ''ferret out''.
+# {{lb|en|by extension|ambitransitive}} To [[uncover]] and bring to [[light]] by [[searching]]; usually to ''ferret out''.
 #* {{RQ:Shakespeare Henry 5|act=IV|scene=iv|passage=Master Fer! I'll fer him, and firk him, and '''ferret''' him.}}
 #* {{quote-book|en|year=1859|author=Charles Dickens|title=A Tale of Two Cities| passage=I confess that we were so unpopular with the outrageous mob, that I only got away from England at the risk of being ducked to death, and that Cly was so '''ferreted''' up and down, that he never would have got away at all but for that sham.}}
 #* {{quote-book|en|year=1842|author=Edgar Alan Poe|title=The Mistery of Marie Roget| passage=He had been piqued by the failure of all his endeavors to '''ferret''' out the assassins.}}
-#* '''1922''', {{w|Virginia Woolf}}, ''{{w|Jacob's Room}}'' Chapter 1
-#*: She '''ferreted''' in her bag; then held it up mouth downwards; then fumbled in her lap, all so vigorously that Charles Steele in the Panama hat suspended his paint-brush.
+#* {{quote-book|en|year=1922|author={{w|Virginia Woolf}}|title={{w|Jacob's Room}}|chapter=1|passage=She '''ferreted''' in her bag; then held it up mouth downwards; then fumbled in her lap, all so vigorously that Charles Steele in the Panama hat suspended his paint-brush.}}
 
 ====Translations====
 {{trans-top|to bring to light by searching}}
@@ -118,7 +116,7 @@ From {{der|en|enm|furet}}, {{m|enm|ferret}}, from {{der|en|fro|furet}}, from {{d
 {{trans-bottom}}
 
 ===Etymology 2===
-{{etyl|it|en}} {{m|it|fioretto}}
+{{bor|en|it|fioretto}}
 
 ====Noun====
 {{en-noun|?}}
@@ -126,6 +124,9 @@ From {{der|en|enm|furet}}, {{m|enm|ferret}}, from {{der|en|fro|furet}}, from {{d
 # {{lb|en|dated}} A [[tape]] of [[silk]], [[cotton]], or [[ribbon]], used to tie [[document]]s, clothing, etc. or along the edge of fabric.
 #* {{rfdate|en}}, {{w|Charles Dickens}}, ''{{w|Bleak House}}''
 #*: red tape and green '''ferret'''
+
+===Further reading===
+* {{pedia}}
 
 ===Anagrams===
 * {{anagrams|en|a=eefrrt|refret}}
