--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -58,7 +58,7 @@ From {{inh|en|enm|sir}}, borrowed from {{der|en|fro|sire|t=master, sir, lord}}, 
 * Galician: {{t|gl|señor|m}}
 * Greek: {{t|el|Σέρ|m}}
 * Hungarian: {{t+|hu|úr}}
-* Japanese: {{t|ja|だんな|tr=dan'na}}
+* Japanese: {{t|ja|旦那|tr=danna}}
 {{trans-mid}}
 * Latvian: {{t|lv|sers|m}}
 * Lithuanian: {{t|lt|ponas|m}}
@@ -114,7 +114,7 @@ From {{inh|en|enm|sir}}, borrowed from {{der|en|fro|sire|t=master, sir, lord}}, 
 * Icelandic: {{t+|is|herra|m}}
 * Indonesian: {{t+|id|tuan}}
 * Italian: {{t+|it|signore|m}}
-* Japanese: {{t|ja|だんな|tr=danna}}, {{t|ja|サー|tr=sā}} {{qualifier|in translations from English}}, {{t|ja|だんな様|tr=だんなさま, danna-sama|sc=Jpan}}
+* Japanese: {{t|ja|旦那|tr=danna}}, {{t|ja|サー|tr=sā}} {{qualifier|in translations from English}}, {{t|ja|[[旦那]][[様]]|tr=danna-sama}}
 * Kazakh: {{t+|kk|мырза}}
 * Khmer: {{t|km|ភោ|tr=pʰou}}
 {{trans-mid}}
