--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -86,6 +86,18 @@ From {{inh|en|enm|dudde|t=cloak, mantle, kind of cloth; ragged clothing or cloth
 
 ----
 
+==Polish==
+
+===Pronunciation===
+* {{pl-IPA}}
+
+===Noun===
+{{head|pl|noun form}}
+
+# {{inflection of|pl|dudy||gen|p}}
+
+----
+
 ==Romanian==
 
 ===Etymology===
