--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -39,13 +39,15 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 ===Noun===
 {{id-noun}}
 
-# [[language]] {{gloss|system of communication using words or symbols}}
-#: {{uxi|id|'''bahasa''' [[Indonesia]]|Indonesian (language)}}
+# {{l|en|language}},
+## {{lb|id|linguistics}} a body of words, and set of methods of combining them (called a grammar), understood by a community and used as a form of communication.
+##: {{uxi|id|'''bahasa''' [[Indonesia]]|Indonesian (language)}}
+## {{lb|id|computing}} a {{l|en|computer language}}; a {{l|en|machine language}}.
 
 ====Alternative forms====
 * {{alter|id|basa}} {{q|nonstandard}}
 
-====Derived terms====
+====Affixations====
 {{der4|id|
 | berbahasa
 | berbahasa-bahasa
@@ -58,9 +60,14 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 |}}
 
 ====Compounds====
-* {{l|id|bahasa baku}}
-* {{l|id|juru bahasa}}
-* {{l|id|pakar bahasa}}
+{{der4|id|
+| {{l|id|bahasa baku}}
+| {{l|id|juru bahasa}}
+| {{l|id|pakar bahasa}}
+| {{l|id|bahasa asing|t=foreign language}}
+| {{l|id|bahasa buatan|t=artificial language, constructed language}}
+| {{l|id|bahasa ibu|t=mother tongue}}
+|}}
 
 ====Descendants====
 * {{desc|bor=1|nl|bahasa}}
