--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -68,6 +68,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 | {{l|id|bahasa asing|t=foreign language}}
 | {{l|id|bahasa buatan|t=artificial language, constructed language}}
 | {{l|id|bahasa ibu|t=mother tongue}}
+| {{l|id|bahasa gaul|t=slang}}
 |}}
 
 ====Descendants====
