--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -69,6 +69,14 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 | {{l|id|bahasa buatan|t=artificial language, constructed language}}
 | {{l|id|bahasa ibu|t=mother tongue}}
 | {{l|id|bahasa gaul|t=slang}}
+| {{l|id|bahasa halus}}
+| {{l|id|bahasa kasar}}
+| {{l|id|bahasa klasik|t=classical language}}
+| {{l|id|bahasa komputer|t=computer language}}
+| {{l|id|bahasa kuno|t=ancient language}}
+| {{l|id|bahasa pasar|t=lingua franca}}
+| {{l|id|bahasa resmi|t=official language}}
+| {{l|id|bahasa tubuh|t=body language}}
 |}}
 
 ====Descendants====
