--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -34,7 +34,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 
 ===Pronunciation===
 * {{IPA|id|/baˈhasa/}}
-* {{hyphenation|ba|ha|sa}}
+* {{hyphenation|id|ba|ha|sa}}
 
 ===Noun===
 {{id-noun}}
