--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -77,6 +77,9 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 | {{l|id|bahasa pasar|t=lingua franca}}
 | {{l|id|bahasa resmi|t=official language}}
 | {{l|id|bahasa tubuh|t=body language}}
+| {{l|id|bahasa mati|t=dead language}}
+| {{l|id|bahasa dagang|t=trading language}}
+| {{l|id|bahasa daerah|t=regional language}}
 |}}
 
 ====Descendants====
