--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -84,7 +84,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 
 ====Descendants====
 * {{desc|bor=1|nl|bahasa}}
-* {{desc|bor=1|en|Bahasa}} {{i|with Malay {{l|ms|bahasa}}}}
+* {{desc|bor=1|en|Bahasa}} {{i|with {{cog|ms|bahasa}}}}
 
 ===Further reading===
 * {{R:KBBI Daring}}
