--- a/en/m/multibillion.34082.wikitext
+++ b/en/m/multibillion.34082.wikitext
@@ -11,6 +11,7 @@
 {{en-adj|-}}
 
 # having a value of [[several]] [[billion]] (in general, at least two billion)
+#* {{quote-journal|en|date=2012-07-03|author=Marina Hyde|passage=According to a study by me, this generates a '''multibillion''' facepalm for the UK economy, making everyone who considers it at least eleventy hundred pounds unhappier.|newspaper=The Guardian|title=[http://www.guardian.co.uk/sport/2012/jul/03/lloyds-happiness-olympics A lesson in Olymp-o-nomics]}}
 
 ====Translations====
 {{trans-top|having a value of several billion}}
