--- a/en/n/nove.26046.wikitext
+++ b/en/n/nove.26046.wikitext
@@ -1,4 +1,22 @@
 {{also|Nove|nové|nóve|novè|nòve|nővé|nově}}
+==Corsican==
+{{cardinalbox|co|8|9|10|ottu|dece}}
+
+===Alternative forms===
+* {{l|co|novi}}
+
+===Etymology===
+From {{inh|co|la|novem}}, from {{inh|co|ine-pro|*h₁néwn̥}}. Cognates include {{cog|it|nove}} and {{cog|pt|nove}}.
+
+===Numeral===
+{{head|co|numeral}}
+
+# [[nine]]
+
+[[Category:Corsican cardinal numbers]]
+
+----
+
 ==Esperanto==
 
 ===Adverb===
