--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -29,8 +29,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 {{trans-top|Mustela erminea}}
 * Albanian: {{t|sq|ermelina|?}}
 * Arabic: {{t|ar|قَاقِم|m}}
-* Armenian: {{t+|hy|կնգում}}, {{t|hy|սպիտակ աքիս}}
-*: Middle Armenian: {{t|axm|ախազ}}
+* Armenian: {{t+|hy|կնգում}}, {{t|hy|սպիտակ աքիս}}, {{t|hy|ախազ}}
 * Basque: {{t|eu|erbinude zuri}}
 * Belarusian: {{t|be|гарнаста́й|m}}
 * Breton: {{t+|br|erminig|?}}
@@ -108,8 +107,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 {{trans-bottom}}
 
 {{trans-top|the white fur of this animal}}
-* Armenian:
-*: Middle Armenian: {{t|axm|ախազ}}
+* Armenian: {{t|hy|ախազ}}
 *: Old Armenian: {{t|xcl|կնգմենի}}
 * Bulgarian: {{t|bg|хермелин|m}}
 * Czech: {{t|cs|hranostaj|m}}
