--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -100,6 +100,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 
 ====Descendants====
 * {{desc|ja|ウエイト|tr=ueito|bor=1}}
+* {{desc|my|ဝိတ်|bor=1}}
 
 ====Translations====
 {{trans-top|force due to gravity}}
