/* Noun */ move "obese" sense near other person senses, e.g. overeater <pig#59689190>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -37,6 +37,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 #: {{ux|en|She considered him a '''pig''' as he invariably stared at her bosom when they talked.}}
 # {{lb|en|derogatory|slang}} A [[dirty]] or [[slovenly]] person.
 #: {{ux|en|He was a '''pig''' and his apartment a pigpen; take-away containers and pizza boxes in a long, moldy stream lined his counter tops.}}
+# {{lb|en|derogatory}} A very [[obese]] person.
 # {{senseid|en|police officer}} {{lb|en|now|chiefly|US|UK|Australia|derogatory|slang}} A [[police officer]]. {{defdate|From ''ante'' 1785.}}
 #: {{ux|en|The protester shouted, “Don't give in to the '''pigs'''!” as he was arrested.}}
 #* '''1989''', {{w|Dan Simmons}}, ''{{w|Carrion Comfort}}'', [http://books.google.com.au/books?id=ClXFYXTcrXUC&pg=PA359&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y#v=onepage&q=%22pig%22|%22pigs%22%20police%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 359],
@@ -58,7 +59,6 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 #: {{ux|en|The '''pig''' was cracked, and molten metal was oozing from the side.}}
 # {{lb|en|engineering}} A device for cleaning or inspecting the inside of an oil or gas [[pipeline]], or for separating different substances within the pipeline. Named for the pig-like squealing noise made by their progress.
 #: {{ux|en|Unfortunately, the '''pig''' sent to clear the obstruction got lodged in a tight bend, adding to the problem.}}
-# {{lb|en|derogatory}} A person who is obese to the extent of resembling a pig (the animal).
 # {{lb|en|US|military|slang}} The general-purpose M60 [[machine gun]], considered to be heavy and bulky.
 #: {{ux|en|Unfortunately, the M60 is about twenty-four pounds and is very unbalanced. You try carrying the '''pig''' around the jungle and see how you feel.}}
 # {{lb|en|uncountable}} A simple [[dice]] [[game]] in which players roll the dice as many times as they like, either accumulating a greater score or losing previous points gained.
