--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -3,8 +3,11 @@
 {{multiple images
 |direction = vertical
 |image1 = Mustela frenata.jpg
+|caption1 = A long-tailed '''weasel'''.
 |image2 = Mustela nivalis -British Wildlife Centre-4.jpg
 |caption2 = A  '''weasel''' (1).
+|image3 = Gressoney-Saint-Jean-Museo-IMG 1815.JPG
+|caption3 = A stuffed '''weasel''' (1).
 }}
 
 ===Alternative forms===
