--- a/en/p/palet.803129.wikitext
+++ b/en/p/palet.803129.wikitext
@@ -13,6 +13,21 @@
 
 ----
 
+==Danish==
+
+===Etymology===
+Borrowed from {{bor|da|fr|palette}}.
+
+===Noun===
+{{da-noun|en|er}}
+
+# [[palette]]
+
+===References===
+{{R:DDO}}
+
+----
+
 ==Dutch==
 
 ===Etymology===
