--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -245,6 +245,15 @@ From {{der|hu|en|mini}}.<ref>{{R:Eory 2007}}</ref>
 
 ----
 
+==Serbo-Croatian==
+
+===Verb===
+{{sh-verb-form}}
+
+# {{inflection of|sh|minuti||2|s|imp}}
+
+----
+
 ==Spanish==
 
 ===Adjective===
