t+de:[[Abziehung]] t+de:[[Subtrahierung]] t+de:[[Subtrahieren]] t+de:[[Abzug]] t-balance ([[WT:EDIT|Assisted]]) <subtraction#59707002>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -41,7 +41,7 @@ Borrowed from {{bor|en|LL.|subtractio|subtractio, subtractionis}}.
 * Finnish: {{t+|fi|vähentäminen}}
 * French: {{t+|fr|soustraction|f}}
 * Georgian: {{t|ka|გამოკლება}}
-* German: {{t+|de|Subtraktion|f}}, {{t|de|Abziehen|n}}
+* German: {{t+|de|Subtraktion|f}}, {{t|de|Abziehen|n}}, {{t|de|Abziehung|f}}, {{t|de|Subtrahierung|f}}, {{t|de|Subtrahieren|n}}, {{t+|de|Abzug |m}}
 * Greek: {{t+|el|αφαίρεση|f}}
 *: Ancient: {{t|grc|ἀφαίρεσις|f}}
 * Hindi: {{t+|hi|घटाना|m}}
@@ -50,8 +50,8 @@ Borrowed from {{bor|en|LL.|subtractio|subtractio, subtractionis}}.
 * Ido: {{t+|io|sustraciono}}
 * Italian: {{t+|it|sottrazione|f}}
 * Japanese: {{t+|ja|引き算|tr=ひきざん, hikizan|sc=Jpan}}, {{t|ja|減法|tr=げんぽう, genpō|sc=Jpan}}
-* Kannada: {{t|kn|ವ್ಯವಕಲನ}}
 {{trans-mid}}
+* Kannada: {{t|kn|ವ್ಯವಕಲನ}}
 * Kazakh: {{t|kk|азайту}}
 * Korean: {{t+|ko|뺄셈}}, {{t+|ko|빼기}}
 * Latvian: {{t|lv|atņemšana|f}}
