/* Translations */ added Norwegian translations <enumerate#59725874>

--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -52,8 +52,10 @@ From {{der|en|la|enumerātus}}, from {{m|la|enumerō}}.
 * Galician: {{t+|gl|enumerar}}
 * Hungarian: {{t+|hu|megszámol}}, {{t+|hu|számlál}}
 * Ido: {{t+|io|enumerar}}
-{{trans-mid}}
 * Japanese: {{t+|ja|数える|tr=kazoeru}}
+{{trans-mid}}
+* Norwegian Bokmål: {{t+|nb|tallfeste}}
+* Norwegian Nynorsk: {{t+|nn|talfeste}}
 * Polish: {{t|pl|odliczyć|pf}}, {{t|pl|odliczać|impf}}
 * Portuguese: {{t+|pt|enumerar}}
 * Russian: {{t+|ru|пересчи́тывать|impf}}, {{t+|ru|пересчита́ть|pf}}
