t+th:[[ลัทธิบูชาบุคคล]] ([[WT:EDIT|Assisted]]) <cult of personality#59728932>

--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -41,7 +41,7 @@
 * Serbo-Croatian: {{t-needed|sh}}
 * Spanish: {{t|es|culto a la personalidad|m}}
 * Swedish: {{t+|sv|personkult|c}}
-* Thai: {{t-needed|th}}
+* Thai: {{t|th|ลัทธิบูชาบุคคล}}
 * Turkish: {{t-needed|tr}}
 * Ukrainian: {{t|uk|культ осо́би|m|sc=Cyrl}}
 * Vietnamese: {{t-needed|vi}}
