t+orv:[[вещь]] t-balance t+orv:[[рѣчь]] ([[WT:EDIT|Assisted]]) <thing#59739525>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -199,8 +199,8 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Kazakh: {{t|kk|нәрсе|sc=Cyrl}}, {{t+|kk|зат}}
 * Khmer: {{t+|km|របស់}}, {{t+|km|វត្ថុ}}
 * Korean: {{t+|ko|물건}}, {{t+|ko|것}}
-{{trans-mid}}
 * Kyrgyz: {{t+|ky|нерсе|sc=Cyrl}}
+{{trans-mid}}
 * Ladin: {{t|lld|cossa|f}}
 * Ladino: {{t|lad|koza}}
 * Lao: {{t|lo|ສິ່ງ}}
@@ -221,6 +221,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 *: Nynorsk: {{t|nn|ting|m}}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|вещь|f}}, {{t|cu|вѣщь|f}}
+* Old East Slavic: {{t|orv|вещь|f}}, {{t|orv|рѣчь|f}}
 * Old English: {{t|ang|þing|n}}
 * Pali: {{t|pi|vatthu|n}}
 * Pashto: {{t|ps|شى|m|tr=šay}}, {{t|ps|څيز|m|tr=ciz}}
