--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -241,6 +241,9 @@ Borrowed from {{bor|hu|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ====Declension====
 {{hu-infl-nom|vodká|o}}{{hu-pos-tok|vodká}}
 
+===Further reading===
+* {{R:ErtSz}}
+
 {{topics|hu|Alcoholic beverages}}
 
 ----
