/* Maltese */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <dud#59806092>

--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -76,11 +76,14 @@ From {{inh|en|enm|dudde|t=cloak, mantle, kind of cloth; ragged clothing or cloth
 
 ==Maltese==
 
+===Etymology===
+From {{inh|mt|ar|دُود}}.
+
 ===Pronunciation===
 * {{IPA|mt|/duːt/}}
 
 ===Noun===
-{{head|mt|noun form}}
+{{mt-coll-noun|sing=dudu|sing2=duda|pauc=dudiet}}
 
 # {{inflection of|mt|dudu||col}} ''or'' '''{{l|mt|duda}}''': several [[worm]]s; worms as a species
 
