--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -32,11 +32,6 @@ From {{inh|en|enm|bound}}, {{m|enm|bund|pos=preterite}} and {{m|enm|bounden}}, {
 |chapter=5|url=http://openlibrary.org/works/OL8479084W
 |passage=Then I had a good think on the subject of the hocussing of Cigarette, and I was reluctantly '''bound''' to admit that once again the man in the corner had found the only possible solution to the mystery.}}
 #: {{ux|en|You are not legally '''bound''' to reply.}}
-# {{lb|en|with infinitive}} Very [[likely]] (to), [[certain]] to
-#* {{quote-book|en|year=1913|author={{w|Joseph C. Lincoln}}|chapter=5
-|title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]
-|passage=When you're well enough off so's you don't have to fret about anything but your heft or your diseases you begin to get queer, I suppose. And the queerer the cure for those ailings the bigger the attraction. A place like the Right Livers' Rest was '''bound''' to draw freaks, same as molasses draws flies.}}
-#: {{ux|en|They were '''bound''' to come into conflict eventually.}}
 # {{lb|en|linguistics|of a [[morpheme]]}} That cannot stand alone as a free word.
 # {{lb|en|mathematics|logic|of a [[variable]]}} [[constrained|Constrained]] by a [[quantifier]].
 # {{lb|en|dated}} [[constipated|Constipated]]; [[costive]].
@@ -64,10 +59,6 @@ From {{inh|en|enm|bound}}, {{m|enm|bund|pos=preterite}} and {{m|enm|bounden}}, {
 |wheelchairbound
 }}
 
-=====Related terms=====
-* {{l|en|bound to}}
-* {{l|en|I'll be bound}}
-
 =====Translations=====
 {{trans-top|obliged to}}
 * Bulgarian: {{t+|bg|задължен}}
@@ -83,15 +74,6 @@ From {{inh|en|enm|bound}}, {{m|enm|bund|pos=preterite}} and {{m|enm|bounden}}, {
 * Russian: {{t+|ru|обяза́нный}}, {{t+|ru|до́лжный}}
 {{trans-bottom}}
 
-{{trans-top|very likely to}}
-* Bulgarian: {{t+|bg|решен}}, {{t|bg|готов да}}
-* Dutch: {{t+|nl|geacht}}
-* Finnish: ''not used as an adjective; see {{m|fi|varmasti}}''
-{{trans-mid}}
-* Hungarian: {{t+|hu|szükségszerű}}, {{t+|hu|elkerülhetetlen}}, {{t+|hu|bizonyos}}, {{t+|hu|muszáj}}
-* Russian: {{t+|ru|непреме́нный}}
-{{trans-bottom}}
-
 {{trans-top|constrained by something, or constrained to something}}
 * Bulgarian: {{t+|bg|свързан}}, {{t+|bg|обвързан}}
 * Danish: {{t|da|begrænset}}
@@ -105,6 +87,65 @@ From {{inh|en|enm|bound}}, {{m|enm|bund|pos=preterite}} and {{m|enm|bounden}}, {
 {{trans-bottom}}
 
 ===Etymology 2===
+{{PIE root|en|bʰuH}}
+From {{inh|en|enm|bound}}, {{m|enm|bownde}}, alternation (with '''-d''' partly for [[euphonic]] effect and partly by [[association]] with Etymology 1 above) of {{cog|enm|boun}}, from {{der|en|non|búinn}}, past participle of {{m|non|búa|t=to prepare}}.
+
+====Adjective====
+{{en-adj}}
+
+# {{lb|en|obsolete}} [[ready|Ready]], [[prepared]].
+# Ready to start or go (to); moving in the direction (of).
+##: ''Which way are you '''bound'''?''
+##: ''Is that message '''bound''' for me?''
+##* {{RQ:Shakespeare Tempest|act=I|scene=ii|page=4|passage={{w|Ariel (The Tempest)|''Ar.''}} {{...}}and for the reſt o'th' Fleet / (Which I diſpers'd) they all haue met againe, / And are vpon the ''Mediterranean'' [[flote|Flote]] / '''Bound''' ſadly home for ''Naples'', / Suppoſing that they ſaw the King[['s|s]] ſhip wrackt, / And his great perſon periſh.}}
+# {{lb|en|with infinitive}} Very [[likely]] (to), [[certain]] to
+#* {{quote-book|en|year=1913|author={{w|Joseph C. Lincoln}}|chapter=5
+|title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]
+|passage=When you're well enough off so's you don't have to fret about anything but your heft or your diseases you begin to get queer, I suppose. And the queerer the cure for those ailings the bigger the attraction. A place like the Right Livers' Rest was '''bound''' to draw freaks, same as molasses draws flies.}}
+#: {{ux|en|They were '''bound''' to come into conflict eventually.}}
+
+=====Derived terms=====
+{{rel-top|terms derived from the adjective ''bound'' ("moving in the direction of")}}
+* {{l|en|-bound}}
+{{rel-mid}}
+* {{l|en|bound for}}
+{{rel-bottom}}
+
+=====Related terms=====
+* {{l|en|bound to}}
+* {{l|en|I'll be bound}}
+
+=====Translations=====
+{{trans-top|ready, prepared}}
+* Bulgarian: {{t+|bg|готов}}
+* Dutch: {{t+|nl|bereid}}
+* German: {{t+|de|bereit}}
+{{trans-mid}}
+* Italian: {{t+|it|destinato}}, {{t+|it|diretto}}, {{t+|it|indirizzato}}
+* Russian: {{t+|ru|гото́вый}}
+{{trans-bottom}}
+
+{{trans-top|ready to start or go (to); moving in the direction (of)}}
+* Bulgarian: {{t|bg|на път за}}
+* Dutch: {{qualifier|voor}} {{t+|nl|bestemd}}
+* Hungarian: {{t+|hu|tartó}}, {{t+|hu|induló}}, {{t+|hu|menő}}, {{t+|hu|haladó}}
+* Irish: {{t|ga|ag [[triall]] ar}}
+{{trans-mid}}
+* Italian: {{t+|it|diretto}}, {{t+|it|incamminato}}
+* Japanese: {{t+|ja|行き|tr=... yuki no|alt=…行きの|sc=Jpan}}, {{t+|ja|向かう|tr=... ni mukatte|alt=…に向かって|sc=Jpan}}
+* Russian: {{t+|ru|направляться|alt=направля́ющийся}}
+{{trans-bottom}}
+
+{{trans-top|very likely to}}
+* Bulgarian: {{t+|bg|решен}}, {{t|bg|готов да}}
+* Dutch: {{t+|nl|geacht}}
+* Finnish: ''not used as an adjective; see {{m|fi|varmasti}}''
+{{trans-mid}}
+* Hungarian: {{t+|hu|szükségszerű}}, {{t+|hu|elkerülhetetlen}}, {{t+|hu|bizonyos}}, {{t+|hu|muszáj}}
+* Russian: {{t+|ru|непреме́нный}}
+{{trans-bottom}}
+
+===Etymology 3===
 From {{inh|en|enm|bounde}}, from {{der|en|fro|bunne}}, from {{der|en|ML.|bodina}}, earlier {{m|la|butina||a bound, limit}}
 
 ====Noun====
@@ -169,7 +210,7 @@ From {{inh|en|enm|bounde}}, from {{der|en|fro|bunne}}, from {{der|en|ML.|bodina}
 {{trans-mid}}
 {{trans-bottom}}
 
-===Etymology 3===
+===Etymology 4===
 From {{inh|en|enm|bounden}}, from the noun (see above).
 
 ====Verb====
@@ -215,7 +256,7 @@ From {{inh|en|enm|bounden}}, from the noun (see above).
 {{trans-mid}}
 {{trans-bottom}}
 
-===Etymology 4===
+===Etymology 5===
 From {{inh|en|enm|*bounden}} (attested as {{m|enm|bounten}}), from {{der|en|fr|bondir|t=to leap, bound, originally make a loud resounding noise}}; perhaps from {{der|en|LL.|bombitāre}}, present active infinitive of {{m|la|bombitō||hum, buzz}}, frequentative verb, from {{der|en|la|bombus|t=a humming or buzzing}}.
 
 ====Noun====
@@ -290,47 +331,6 @@ From {{inh|en|enm|*bounden}} (attested as {{m|enm|bounten}}), from {{der|en|fr|b
 * Russian: {{t+|ru|пры́гать}}, {{t+|ru|скака́ть}}
 * Scottish Gaelic: {{t|gd|leum}}
 * Swedish: {{t+|sv|skutta}}
-{{trans-bottom}}
-
-===Etymology 5===
-{{PIE root|en|bʰuH}}
-From {{inh|en|enm|bound}}, {{m|enm|bownde}}, alternation (with '''-d''' partly for [[euphonic]] effect and partly by [[association]] with Etymology 1 above) of {{cog|enm|boun}}, from {{der|en|non|búinn}}, past participle of {{m|non|búa|t=to prepare}}.
-
-====Adjective====
-{{en-adj}}
-
-# {{lb|en|obsolete}} [[ready|Ready]], [[prepared]].
-## Ready to start or go (to); moving in the direction (of).
-##: ''Which way are you '''bound'''?''
-##: ''Is that message '''bound''' for me?''
-##* {{RQ:Shakespeare Tempest|act=I|scene=ii|page=4|passage={{w|Ariel (The Tempest)|''Ar.''}} {{...}}and for the reſt o'th' Fleet / (Which I diſpers'd) they all haue met againe, / And are vpon the ''Mediterranean'' [[flote|Flote]] / '''Bound''' ſadly home for ''Naples'', / Suppoſing that they ſaw the King[['s|s]] ſhip wrackt, / And his great perſon periſh.}}
-
-=====Derived terms=====
-{{rel-top|terms derived from the adjective ''bound'' ("moving in the direction of")}}
-* {{l|en|-bound}}
-{{rel-mid}}
-* {{l|en|bound for}}
-{{rel-bottom}}
-
-=====Translations=====
-{{trans-top|ready, prepared}}
-* Bulgarian: {{t+|bg|готов}}
-* Dutch: {{t+|nl|bereid}}
-* German: {{t+|de|bereit}}
-{{trans-mid}}
-* Italian: {{t+|it|destinato}}, {{t+|it|diretto}}, {{t+|it|indirizzato}}
-* Russian: {{t+|ru|гото́вый}}
-{{trans-bottom}}
-
-{{trans-top|ready to start or go (to); moving in the direction (of)}}
-* Bulgarian: {{t|bg|на път за}}
-* Dutch: {{qualifier|voor}} {{t+|nl|bestemd}}
-* Hungarian: {{t+|hu|tartó}}, {{t+|hu|induló}}, {{t+|hu|menő}}, {{t+|hu|haladó}}
-* Irish: {{t|ga|ag [[triall]] ar}}
-{{trans-mid}}
-* Italian: {{t+|it|diretto}}, {{t+|it|incamminato}}
-* Japanese: {{t+|ja|行き|tr=... yuki no|alt=…行きの|sc=Jpan}}, {{t+|ja|向かう|tr=... ni mukatte|alt=…に向かって|sc=Jpan}}
-* Russian: {{t+|ru|направляться|alt=направля́ющийся}}
 {{trans-bottom}}
 
 ===Anagrams===
