--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -11,10 +11,10 @@ From the {{w|Gerber}} Childrenswear brand name {{w|Onesies}}. The name became [[
 
 ===Noun===
 {{en-noun}}
-
-# {{lb|en|US}} A one-piece [[garment]] for an [[infant]] or small [[child]], generally worn over a [[diaper]].
-# One-piece adult [[loungewear]] [[jumpsuit]].
-# One-piece fashionable streetwear worn mostly by teenagers.
+# ''Name given to a number of one-piece attires''
+## {{lb|en|US}} A one-piece [[garment]] for an [[infant]] or small [[child]], generally worn over a [[diaper]].
+## One-piece adult [[loungewear]] [[jumpsuit]].
+## One-piece fashionable streetwear worn mostly by teenagers.
 
 ====Synonyms====
 * {{sense|a one-piece baby garment}} {{l|en|romper}}, {{l|en|romper suit}}
