added Nynorsk entry <bend#59822509>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -430,6 +430,33 @@ From {{der|sq|ine-pro|*band||drop}}. Compare {{cog|xpg|βεδυ||water}}, {{cog|
 
 ----
 
+==Norwegian Nynorsk==
+
+===Etymology===
+From {{m|nn|benda}}, {{m|nn|bende||to bend}}.
+
+===Noun===
+{{nn-noun-n1}}
+
+# a {{l|en|bend}}
+# a [[bent]] [[position]]
+# a [[butt]] on a thick [[rope]]
+
+===Participle===
+{{nn-part-1}}
+
+# {{nn-verb-form of|past participle|bend}}
+
+===Verb===
+{{nn-verb-form}}
+
+# {{nn-verb-form of|imperative|bend}}
+
+===References===
+* {{R:The Nynorsk Dictionary}}
+
+----
+
 ==Old Norse==
 
 ===Participle===
