/* Scottish Gaelic */ <cop#59825291>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -294,6 +294,12 @@ From {{inh|gd|mga|copp}}, borrowed from either {{bor|mga|ang|copp}} or {{bor|mga
 
 # [[foam]], [[froth]]
 
+====Derived terms====
+* {{l|gd|copach||foamy, frothy}}
+* {{l|gd|cop na mara||sea foam, [[spume]]}}
+* {{l|gd|copraich|pos=verb|t=fizz}}
+* {{l|gd|cop ri do bheul||foaming at the mouth}}
+
 ===Verb===
 {{gd-verb|past=chop|fut=copidh|vn=copadh|pp=copte}}
 
