--- a/en/c/CFC.26242.wikitext
+++ b/en/c/CFC.26242.wikitext
@@ -1,6 +1,9 @@
 ==English==
 {{wikipedia}}
 
+===Alternative forms===
+* {{sense|chlorofluorocarbon}} {{alter|en|CFK||rare}}
+
 ===Proper noun===
 {{en-proper noun}}
 
@@ -12,9 +15,6 @@
 {{en-noun}}
 
 # {{lb|en|organic chemistry}} {{initialism of|en|chlorofluorocarbon|nodot=1}}, a class of [[molecule]]s containing [[chlorine]], [[fluorine]] and [[carbon]] [[atom]]s
-
-====Synonyms====
-* {{l|en|CFK}} {{q|rare}}
 
 ====Related terms====
 {{sense|chlorofluorocarbon}}
