/* Serbo-Croatian */ <dud#59832587>

--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -119,7 +119,7 @@ Borrowed from {{bor|ro|ota|طوت|tr=tut, dut}}, from {{bor|ro|fa|توت|tr=tut}
 ==Serbo-Croatian==
 
 ===Etymology===
-Borrowed from {{bor|sh|ota|طوت|tr=tut, dut}}, from {{bor|sh|fa|توت|tr=tut}}, possibly from {{bor|sh|arc|ܬܘܬܐ}}/{{m|arc|תותא|tr=tuta}}. Otherwise, Aramaic may be derived from Persian.
+Borrowed from {{bor|sh|ota|طوت|tr=tut, dut}}, from {{der|sh|fa|توت|tr=tut}}.
 
 ===Pronunciation===
 * {{IPA|sh|/dûd/}}
@@ -143,8 +143,7 @@ Borrowed from {{bor|sh|ota|طوت|tr=tut, dut}}, from {{bor|sh|fa|توت|tr=tut}
 ====Synonyms====
 * {{l|sh|mȗrva}}
 
-[[Category:sh:Fruits]]
-[[Category:sh:Mulberry family plants]]
+{{c|sh|Fruits|Mulberry family plants}}
 
 ----
 
