--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -215,7 +215,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 [[Category:English basic words]]
 [[Category:English ergative verbs]]
 [[Category:English irregular verbs]]
-[[Category:en:Bodily fluids]]
+[[Category:en:Bodily functions]]
 
 ----
 
